Fixed issue with abb-header showing on mobile

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     display: none;
 }
 
+#desktop-header {
+    display: none;
+}
+
 p {
     color: white;
 }
